[gd_scene load_steps=3 format=3 uid="uid://c3agxo7lalh3h"]

[ext_resource type="Script" path="res://Scripts/switch.gd" id="1_fy8bg"]
[ext_resource type="PackedScene" uid="uid://dqa8gpir77yuu" path="res://Scenes/Components/interactable.tscn" id="2_hsgjr"]

[node name="Switch" type="Node3D"]
script = ExtResource("1_fy8bg")
activeTimer = 0.2

[node name="Interactable" parent="." instance=ExtResource("2_hsgjr")]

[node name="ActiveLength" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ActivationDelay" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="interaction_function" from="Interactable" to="." method="_on_interactable_interaction_function"]
[connection signal="timeout" from="ActiveLength" to="." method="_on_active_length_timeout"]
[connection signal="timeout" from="ActivationDelay" to="." method="_on_activation_delay_timeout"]
